--- a/opentelemetry/opentelemetry-module/build.gradle
+++ b/opentelemetry/opentelemetry-module/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     compileOnly project(':database:database-common')
     compileOnly project(':scheduling:scheduling-common')
     compileOnly project(':cache:cache-common')
+    compileOnly project(':s3:s3-client-aws')
 }
