--- a/s3/s3-client-minio/build.gradle
+++ b/s3/s3-client-minio/build.gradle
@@ -5,10 +5,7 @@ dependencies {
     compileOnly project(":http:http-client-common")
 
     api project(":s3:s3-client-common")
-    api("software.amazon.awssdk:s3:2.25.50") {
-        exclude group: "software.amazon.awssdk", module: "apache-client"
-        exclude group: "software.amazon.awssdk", module: "netty-nio-client"
-    }
+    api "io.minio:minio:8.5.10"
 
     implementation project(":config:config-common")
 
