AWS & Minio S3 client modules ready Java AP ready

--- a/annotation-processors/build.gradle
+++ b/annotation-processors/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     api project(':mapstruct:mapstruct-java-extension')
     api project(':logging:declarative-logging:declarative-logging-annotation-processor')
     api project(':grpc:grpc-client-annotation-processor')
+    api project(':s3:s3-client-annotation-processor')
 }
