--- a/s3/s3-client-aws/build.gradle
+++ b/s3/s3-client-aws/build.gradle
@@ -1,14 +1,15 @@
 apply from: "${project.rootDir}/gradle/in-test-generated.gradle"
 
 dependencies {
-    annotationProcessor project(':config:config-annotation-processor')
+    annotationProcessor project(":config:config-annotation-processor")
     compileOnly project(":http:http-client-common")
 
     api project(":s3:s3-client-common")
-    api("software.amazon.awssdk:s3:2.25.50") {
+    api("software.amazon.awssdk:s3:2.25.55") {
         exclude group: "software.amazon.awssdk", module: "apache-client"
         exclude group: "software.amazon.awssdk", module: "netty-nio-client"
     }
+    implementation "io.projectreactor.addons:reactor-adapter:3.5.1"
 
     implementation project(":config:config-common")
 
