Camunda Engine telemetry added

--- a/micrometer/micrometer-module/build.gradle
+++ b/micrometer/micrometer-module/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     compileOnly project(':resilient:resilient-kora')
     compileOnly project(':cache:cache-common')
     compileOnly project(':cache:cache-caffeine')
+    compileOnly project(':camunda:camunda-engine')
+    compileOnly project(':camunda:camunda-rest-undertow')
 }
