Camunda Rest telemetry added

--- a/camunda/camunda-rest-undertow/build.gradle
+++ b/camunda/camunda-rest-undertow/build.gradle
@@ -9,8 +9,10 @@ dependencies {
     }
 
     implementation project(":config:config-common")
+    implementation project(':logging:logging-common')
     implementation libs.resteasy.undertow.jakarta
 
+    api project(':telemetry:telemetry-common')
     api project(":common")
     api libs.camunda7.rest.jakarta
     api libs.jakarta.rs.api
