S3 AWS & Minio modules telemetry added S3Body more contracts added

--- a/opentelemetry/opentelemetry-module/build.gradle
+++ b/opentelemetry/opentelemetry-module/build.gradle
@@ -10,5 +10,5 @@ dependencies {
     compileOnly project(':database:database-common')
     compileOnly project(':scheduling:scheduling-common')
     compileOnly project(':cache:cache-common')
-    compileOnly project(':s3:s3-client-aws')
+    compileOnly project(':s3:s3-client-common')
 }
