--- a/s3/s3-client-minio/build.gradle
+++ b/s3/s3-client-minio/build.gradle
@@ -2,10 +2,11 @@ apply from: "${project.rootDir}/gradle/in-test-generated.gradle"
 
 dependencies {
     annotationProcessor project(":config:config-annotation-processor")
-    compileOnly project(":http:http-client-common")
+
+    compileOnly libs.jetbrains.annotations
 
     api project(":s3:s3-client-common")
-    api "io.minio:minio:8.5.10"
+    api libs.s3client.minio
 
     implementation project(":config:config-common")
 
