S3 Kotlin KSP added

--- a/s3/s3-client-symbol-processor/build.gradle
+++ b/s3/s3-client-symbol-processor/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     testImplementation project(":config:config-common")
     testImplementation testFixtures(project(":symbol-processor-common"))
     testImplementation(libs.kotlin.stdlib.lib)
-    testImplementation(libs.kotlin.coroutines.reactor)
+    testImplementation(libs.kotlin.coroutines.jdk8)
 }
 
 kotlin {
