S3 upload in progress

--- a/s3/s3-client-aws/build.gradle
+++ b/s3/s3-client-aws/build.gradle
@@ -11,7 +11,7 @@ dependencies {
         exclude group: "software.amazon.awssdk", module: "apache-client"
         exclude group: "software.amazon.awssdk", module: "netty-nio-client"
     }
-    implementation libs.reactor.adapter
+    api libs.reactor.adapter
 
     implementation project(":config:config-common")
 
